client id now in settings file

--- a/sc-client/settings.cfg
+++ b/sc-client/settings.cfg
@@ -6,3 +6,7 @@ BACKUP_TIME 11
 #controls how frequently the client will ping command server
 #this is an interval in seconds (90=ping every 90 seconds)
 KEEPALIVE_FREQ 30
+
+#client id to transmit to the server
+#do not change this value!
+CLIENT_ID 1
