basic structure for reading files from disk and processing files and dir structure

--- a/sc-client/settings.cfg
+++ b/sc-client/settings.cfg
@@ -9,4 +9,7 @@ KEEPALIVE_FREQ 30
 
 #client id to transmit to the server
 #do not change this value!
-CLIENT_ID 0
+CLIENT_ID 1
+
+#paths to backup
+BACKUP_PATHS E:\Work\cnoqc\Commands,E:\Finance\Budget,C:\Users\Ryan\Documents\background.jpg
