encrypt_file() basic functionality tested with a few small txt files

--- a/sc-client/settings.cfg
+++ b/sc-client/settings.cfg
@@ -12,4 +12,4 @@ KEEPALIVE_FREQ 30
 CLIENT_ID 1
 
 #paths to backup
-BACKUP_PATHS E:\Finance\Budget,C:\Users\Ryan\Documents\background.jpg
+BACKUP_PATHS E:\DarkAge\stormcloud\test_files,C:\Users\Ryan\Documents\background.jpg
