changes client side prints to logging

--- a/sc-client/settings.cfg
+++ b/sc-client/settings.cfg
@@ -1,3 +1,8 @@
+#send logging and error information to dark age servers
+#to assist with development/bug fixes/discovery of errors
+#1 = on, 0 = off
+SEND_LOGS 1
+
 #controls backup time of day
 #hour of the day/24hr time
 #i.e. 23 = 11PM (23:00 system time)
