client side refactor in progress

--- a/installer/settings.cfg
+++ b/installer/settings.cfg
@@ -10,4 +10,5 @@ BACKUP_TIME 20
 # Interval in seconds (90=send keepalive every 90 seconds)
 KEEPALIVE_FREQ 100
 # paths to backup
-/Users/Ryan/Desktop/Apartment
+BACKUP_PATHS
+/tmp
