--- a/sc-client/settings.cfg
+++ b/sc-client/settings.cfg
@@ -1,20 +1,15 @@
-#send logging and error information to dark age servers
-#to assist with development/bug fixes/discovery of errors
-#1 = on, 0 = off
+# send logging and error information to dark age servers
+# to assist with development/bug fixes/discovery of errors
+# 1 = ON, 0 = OFF
 SEND_LOGS 1
-
-#controls backup time of day
-#hour of the day/24hr time
-#i.e. 23 = 11PM (23:00 system time)
-BACKUP_TIME 11
-
-#controls how frequently the client will ping command server
-#this is an interval in seconds (90=ping every 90 seconds)
-KEEPALIVE_FREQ 30
-
-#client id to transmit to the server
-#do not change this value!
-CLIENT_ID 1
-
-#paths to backup
-BACKUP_PATHS E:\DarkAge\stormcloud\test_files
+# controls backup time of day
+# hour of the day/24hr time
+# i.e. 23 = 11PM (system time)
+BACKUP_TIME 20
+# controls how frequently this device will send keepalive message to the stormcloud servers.
+# Interval in seconds (90=send keepalive every 90 seconds)
+KEEPALIVE_FREQ 100
+# paths to backup
+BACKUP_PATHS
+/Users/Ryan/Desktop/Apartment
+/Users/Ryan/Desktop/Work
