--- a/installer/settings.cfg
+++ b/installer/settings.cfg
@@ -1,7 +1,7 @@
 # send logging and error information to dark age servers
 # to assist with development/bug fixes/discovery of errors
 # 1 = ON, 0 = OFF
-SEND_LOGS 0
+SEND_LOGS 1
 # controls backup time of day
 # hour of the day/24hr time
 # i.e. 23 = 11PM (system time)
@@ -11,4 +11,4 @@ BACKUP_TIME 20
 KEEPALIVE_FREQ 100
 # paths to backup
 BACKUP_PATHS
-/tmp
+/Users/ryan/
