adds capability for recursive file backup

--- a/sc-client/settings.cfg
+++ b/sc-client/settings.cfg
@@ -2,14 +2,21 @@
 # to assist with development/bug fixes/discovery of errors
 # 1 = ON, 0 = OFF
 SEND_LOGS 1
+
 # controls backup time of day
 # hour of the day/24hr time
 # i.e. 23 = 11PM (system time)
 BACKUP_TIME 20
+
 # controls how frequently this device will send keepalive message to the stormcloud servers.
 # Interval in seconds (90=send keepalive every 90 seconds)
 KEEPALIVE_FREQ 100
+
 # paths to backup
 BACKUP_PATHS
 /Users/Ryan/Desktop/Apartment
 /Users/Ryan/Desktop/Work
+
+# paths to backup recursively
+RECURSIVE_BACKUP_PATHS
+/Users/Ryan/Desktop/Guard
