increases timeout and test recursive paths on windows

--- a/sc-client/settings.cfg
+++ b/sc-client/settings.cfg
@@ -14,9 +14,8 @@ KEEPALIVE_FREQ 100
 
 # paths to backup
 BACKUP_PATHS
-/Users/Ryan/Desktop/Apartment
-/Users/Ryan/Desktop/Work
+E:\DarkAge\stormcloud\test_files
 
 # paths to backup recursively
 RECURSIVE_BACKUP_PATHS
-/Users/Ryan/Desktop/Guard
+E:\School\Security
