adds pyinstaller windows build

--- a/sc-client/settings.cfg
+++ b/sc-client/settings.cfg
@@ -16,6 +16,6 @@ KEEPALIVE_FREQ 100
 BACKUP_PATHS
 E:\DarkAge\stormcloud\test_files
 
-# paths to backup recursively
+# paths to recursively backup
 RECURSIVE_BACKUP_PATHS
-E:\School\Security
+E:\CompSci
