fixes hash db updating early

--- a/sc-client/settings.cfg
+++ b/sc-client/settings.cfg
@@ -14,8 +14,7 @@ KEEPALIVE_FREQ 100
 
 # paths to backup
 BACKUP_PATHS
-E:\DarkAge\stormcloud\test_files
+/Users/ryan/Desktop/Random/
 
 # paths to recursively backup
 RECURSIVE_BACKUP_PATHS
-E:\CompSci
