changes sc client to use new installer settings file

--- a/sc-client/settings.cfg
+++ b/sc-client/settings.cfg
@@ -2,19 +2,23 @@
 # to assist with development/bug fixes/discovery of errors
 # 1 = ON, 0 = OFF
 SEND_LOGS 1
-
 # controls backup time of day
 # hour of the day/24hr time
 # i.e. 23 = 11PM (system time)
-BACKUP_TIME 20
-
+BACKUP_TIME 23
 # controls how frequently this device will send keepalive message to the stormcloud servers.
 # Interval in seconds (90=send keepalive every 90 seconds)
-KEEPALIVE_FREQ 100
-
+KEEPALIVE_FREQ 300
+# symmetric key for device encryption
+SECRET_KEY BD-Y7k9OTT6bPgyxvEkCc4j72MUtPjrbgyL3Su_pSGY=
+# Agent ID, for identifying this device to the stormcloud servers
+AGENT_ID IQ-FpepCmu8--5GgRiuxCIs
+# API key
+API_KEY y6hvm4zhvrUx3oSz2zlyRQ
 # paths to backup
 BACKUP_PATHS
-/Users/ryan/Desktop/Random/
-
+/Users/ryan/Desktop/Wedding
 # paths to recursively backup
 RECURSIVE_BACKUP_PATHS
+/Users/ryan/Desktop/Random
+/Users/ryan/Desktop/Guard
