small improvement to logging in client

--- a/sc-client/settings.cfg
+++ b/sc-client/settings.cfg
@@ -20,5 +20,4 @@ BACKUP_PATHS
 /Users/ryan/Desktop/Wedding
 # paths to recursively backup
 RECURSIVE_BACKUP_PATHS
-/Users/ryan/Desktop/Random
-/Users/ryan/Desktop/Guard
+E:\School\Phil
